# ImageToMetatileConverter

./: Main.java  README.md  metametatileLookups.asm  metametatiles.asm  metatileLookups.asm  metatiles.asm  missingColors.txt  tiles.asm  tiles.chr
Concrete Man/: palettes.txt  screenReorder.txt
Image2MT/: CHANGELOG.md  Image2MT.cabal
Image2MT/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Image2MT/src/: Main.hs
Image2MTBQN/: read.bqn
Splash Woman/: metatileLookups.asm  tiles.asm  tiles.chr
Splash Woman/resources/: palettes.perScreen
Tornado Man/: palettes.txt  screenReorder.txt
Tornado man clouds/: .apl.history  palettes.txt
resources/: screens.reorder
